Update examples in UD07