@@ -1,14 +1,13 @@
 package es.martinezpenya;
 
-import java.io.IOException;
-import java.util.Locale;
-import java.util.ResourceBundle;
-
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
+
+import java.io.IOException;
+import java.util.ResourceBundle;
 
 /**
  * JavaFX App
@@ -19,7 +18,7 @@ public class App extends Application {
 
     @Override
     public void start(Stage stage) throws IOException {
-        scene = new Scene(loadFXML("CalculadoraNew"), 410, 225);
+        scene = new Scene(loadFXML("primary"), 640, 480);
         stage.setScene(scene);
         stage.show();
     }
@@ -29,19 +28,12 @@ public class App extends Application {
     }
 
     private static Parent loadFXML(String fxml) throws IOException {
-        Locale.setDefault(Locale.ENGLISH);
-        ResourceBundle resourceBundle = ResourceBundle.getBundle("es.martinezpenya.i18n.calculadora");
-        FXMLLoader fxmlLoader = new FXMLLoader(App.class.getResource(fxml + ".fxml"), resourceBundle);
-
+        FXMLLoader fxmlLoader = new FXMLLoader(App.class.getResource(fxml + ".fxml"));
         return fxmlLoader.load();
     }
 
     public static void main(String[] args) {
         launch();
     }
-
-    // java -jar --module-path
-    // /media/DADES/NextCloud/DOCENCIA/PRG_2223/javafx-sdk-19.0.2.1/lib/
-    // --add-modules=javafx.controls,javafx.fxml demo.jar
 
 }
